<?xml version="1.0" encoding="UTF-8"?>
<!--
 DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.

 Copyright (c) 2011-2015 ForgeRock AS. All rights reserved.

 The contents of this file are subject to the terms
 of the Common Development and Distribution License
 (the License). You may not use this file except in
 compliance with the License.x

 You can obtain a copy of the License at
 http://forgerock.org/license/CDDLv1.0.html
 See the License for the specific language governing
 permission and limitations under the License.

 When distributing Covered Code, include this CDDL
 Header Notice in each file and include the License file
 at http://forgerock.org/license/CDDLv1.0.html
 If applicable, add the following below the CDDL Header,
 with the fields enclosed by brackets [] replaced by
 your own identifying information:
 "Portions Copyrighted [year] [name of copyright owner]"

 Portions Copyrighted 2018-2025 3A Systems, LLC
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.openidentityplatform</groupId>
    <artifactId>openicf</artifactId>
    <version>2.0.3-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>OpenICF</name>
    <description>
        The Open Identity Connectors Framework and Toolkit (OpenICF) is built to help drive development of Connectors.
        Connectors provide a consistent generic layer between applications and target resources.
    </description>
    <inceptionYear>2018</inceptionYear>
    <url>https://github.com/OpenIdentityPlatform/OpenICF</url>
    <properties>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.surefire.options />
   	</properties>
    <licenses>
        <license>
            <name>CDDL-1.0</name>
            <url>http://opensource.org/licenses/CDDL-1.0</url>
            <comments>Common Development and Distribution License (CDDL) 1.0.
                This license applies to OpenICF source code as indicated in the
                sources.
            </comments>
            <distribution>repo</distribution>
        </license>
        <license>
            <name>CC BY-NC-ND 3.0</name>
            <url>http://creativecommons.org/licenses/by-nc-nd/3.0/</url>
            <comments>Creative Commons Attribution-NonCommercial-NoDerivs 3.0
                Unported. This license applies to the site content, and to the
                documentation as indicated in the documentation source code.
            </comments>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>Open Identity Platform Community</id>
            <name>Open Identity Platform Community</name>
            <email>open-identity-platform@googlegroups.com</email>
            <organization>Open Identity Platform Community</organization>
            <organizationUrl>https://www.openidentityplatform.org/</organizationUrl>
            <url>https://github.com/OpenIdentityPlatform/OpenICF</url>
        </developer>
    </developers>
    <issueManagement>
        <system>github.com</system>
        <url>https://github.com/OpenIdentityPlatform/OpenICF/issues</url>
    </issueManagement>
    <scm>
        <connection>scm:git:https://github.com/OpenIdentityPlatform/OpenICFgit</connection>
        <developerConnection>scm:git:https://github.com/OpenIdentityPlatform/OpenICF.git</developerConnection>
        <url>https://github.com/OpenIdentityPlatform/OpenICF</url>
        <tag>HEAD</tag>
    </scm>
    <repositories>
	        <repository>
	            <name>Central Portal Snapshots</name>
	            <id>central-portal-snapshots</id>
	            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
	            <releases>
	                <enabled>false</enabled>
	            </releases>
	            <snapshots>
	                <enabled>true</enabled>
	            </snapshots>
	        </repository>
	    </repositories>
	<pluginRepositories>
		<pluginRepository>
			<name>Central Portal Snapshots</name>
	            <id>central-portal-snapshots</id>
	            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
    <modules>
        <module>OpenICF-dbcommon</module>
        <module>OpenICF-java-framework</module>
        <module>OpenICF-maven-plugin</module>
        <module>OpenICF-csvfile-connector</module>
        <module>OpenICF-databasetable-connector</module>
        <module>OpenICF-groovy-connector</module>
        <module>OpenICF-kerberos-connector</module>
        <module>OpenICF-ldap-connector</module>
        <module>OpenICF-ssh-connector</module>
        <module>OpenICF-xml-connector</module>
    </modules>

    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>gpg.passphrase</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <configuration>
                            <passphrase>${gpg.passphrase}</passphrase>
                            <useAgent>true</useAgent>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk17.options</id>
            <activation>
                <jdk>[17,)</jdk>
            </activation>
            <properties>
                <java.surefire.options>
                    --add-opens java.base/java.lang=ALL-UNNAMED
                    --add-opens java.base/java.security=ALL-UNNAMED
                    --add-opens java.base/java.net=ALL-UNNAMED
                    --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                    --add-opens java.base/java.util=ALL-UNNAMED
                </java.surefire.options>
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.openidentityplatform.opendj</groupId>
                <artifactId>opendj-parent</artifactId>
                <version>5.0.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.framework</groupId>
                <artifactId>connector-framework</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.framework</groupId>
                <artifactId>connector-test-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.framework</groupId>
                <artifactId>connector-framework-internal</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.framework</groupId>
                <artifactId>connector-framework-contract</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.framework</groupId>
                <artifactId>connector-framework-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.connectors</groupId>
                <artifactId>groovy-connector</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.connectors</groupId>
                <artifactId>xml-connector</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.connectors</groupId>
                <artifactId>csvfile-connector</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.connectors</groupId>
                <artifactId>ldap-connector</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.connectors</groupId>
                <artifactId>databasetable-connector</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.connectors</groupId>
                <artifactId>ssh-connector</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.connectors</groupId>
                <artifactId>kerberos-connector</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.framework</groupId>
                <artifactId>icfl-over-slf4j</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openidentityplatform.openicf.connectors</groupId>
                <artifactId>groovy-connector</artifactId>
                <classifier>samples</classifier>
                <type>zip</type>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.reactivex</groupId>
                <artifactId>rxjava</artifactId>
                <version>1.2.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.openidentityplatform.openicf</groupId>
                    <artifactId>openicf-maven-plugin</artifactId>
                    <version>${project.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <fork>true</fork>
                        <release>${maven.compiler.target}</release>
                        <compilerArgs>
                            <arg>-XDignore.symbol.file</arg>
                            <arg>-Xlint:unchecked</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <argLine>${java.surefire.options}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
            				<artifactId>central-publishing-maven-plugin</artifactId>
            				<version>0.8.0</version>
            				<extensions>true</extensions>
            				<configuration>
            				    <publishingServerId>ossrh</publishingServerId>
            				    <autoPublish>true</autoPublish>
					    <waitMaxTime>5400</waitMaxTime>
            				</configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doclint>none</doclint>
                    <encoding>UTF-8</encoding>
                    <additionalOptions>
                        <additionalOption>--add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED</additionalOption>
                    </additionalOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
        </plugins>
    </reporting>
</project>
